src/components/postmanncomponent/PostmannComponent.css
/* PostmannComponent.css */

:root {
    --background-color: #121212;
    --font-color-red: #61dafb;
    --font-color-blue: #5258cc;
    --font-color-react: #61dafb;
    --font-color-slategrey: slategrey;
    --modal-bg-color: #1e1e1e;
    --padding: 4px 13px;
    --border-radius: 3px;
    --margin: 0 1.1ch;
    --margin-right: 1.1ch;
}

@font-face {
    font-family: 'IBMPlexMono';
    src: url('../fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf') format('truetype');
}

@font-face {
    font-family: 'Inter';
    src: url('../fonts/Inter/Inter-Regular.ttf') format('truetype');
}

.postmann-container {
    font-family: 'Arial', sans-serif;
    background-color: #1e1e1e;
    color: #ffffff;
    padding: 20px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
    text-align: left;
    min-height: 37rem;
}
.postmann-title-anchor {
    font-weight: inherit;
    font-size: inherit;
    font-style: inherit;
    font-family: inherit;
    color: inherit;
}

.postmann-title {
    font-size: 18px!important;
    /* margin-bottom: 12px!important; */
    color: #f15a24!important;
    cursor: default;
    /* Postmann color */
    /* #61dafb;
    */
}

.postmann-title-anchor:hover {
    color: #f15a24!important;
    text-decoration: underline;
}
.postmann-title-anchor:hover .postmann-logo.rotating {
    animation-play-state: paused;
}
.postmann-title-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 0.46rem;
    line-height: 0.46rem;
    padding-top: 1rem;
}

.postmann-select,
.postmann-input,
.postmann-textarea {
    width: 100%;
    padding: 12px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 1px solid #ccc;
    /* React blue color */
    border-radius: 4px;
    background-color: #111;
    /* #282c34;
    */
    /* Dark background color */
    color: #ffffff;
    resize: vertical;
}

.postmann-select {
    cursor: pointer;
}

.postmann-textarea {
    height: 7.75rem;
    min-height: 7.75rem;
}

.postmann-input::placeholder,
.postmann-textarea::placeholder {
    color: #8a8a8a;
    font-family: monospace;
    font-size: 11px;
}

.postmann-button {
    background-color: var(--font-color-react);
    color: #1e1e1e;
    padding: 10px 15px;
    border: 1px solid var(--font-color-react);
    border-radius: 4px;
    cursor: pointer;
    font-size: 14px;
    font-weight: bold;
    transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
}

.postmann-button:hover {
    background-color: #4fa3d1;
    border-color: #4fa3d1;
    color: #ffffff;
}

.postmann-tabs {
    display: flex;
}

.postmann-tab {
    flex: 1;
    padding: 9px 12px;
    cursor: pointer;
    border: 1px solid var(--font-color-react);
    /* React blue color */
    border-radius: 4px 4px 0 0;
    background-color: #282c34;
    /* Dark background color */
    color: var(--font-color-react);
    /* React blue color */
}

.postmann-tab:hover {
    background-color: #4fa3d1;
    /* Darker shade on hover */
}

.postmann-tab.active {
    background-color: #4fa3d1;
    /* Active tab color */
    border-bottom: 1px solid #4fa3d1;
    /* Active tab border color */
    color: white;
    text-decoration: none;
}

.postmann-raw-response,
.syntax-hl-custom-styles {
    border-width: 1px !important;
    border-style: solid !important;
    border-color: transparent var(--font-color-react) var(--font-color-react) var(--font-color-react) !important;
    border-radius: 0 0 4px 4px !important;
    background-color: #282c34;
    color: #ffffff;
    overflow: auto;
    padding: 12px;
    box-sizing: border-box;
    width: 100%;
}

.syntax-hl-custom-styles {
    padding: 1em 0.45em 1em 0 !important;
    margin: 0 !important;
}

.postmann-raw-response {
    width: 100%;
    padding-left: 0.5rem !important;
    margin-top: -1px;
    overflow-x: hidden;
}

.loading-indicator {
    display: flex;
    font-size: 18px;
    color: var(--font-color-react);
    /* React blue color */
    border: 1px solid var(--font-color-react);
    border-top: none;
    justify-content: center;
    padding: 0.35rem 0;
    align-items: center;
}

.dot1,
.dot2,
.dot3 {
    width: 3px;
    height: 3px;
    background-color: var(--font-color-react);
    /* React blue color */
    border-radius: 50%;
    margin: 0 4px;
    animation: loadingDots 1s infinite ease-in-out;
}

@keyframes loadingDots {

    0%,
    20%,
    80%,
    100% {
        transform: scale(1);
    }

    50% {
        transform: scale(1.5);
    }
}

.postmann-get {
    color: #007F31;
}

.postmann-post {
    color: #AD7A03;
}

.postmann-put {
    color: #0053B8;
}

.postmann-patch {
    color: #623497;
}

.postmann-delete {
    color: #d73a49;
}

.success {
    color: green;
    /* Green color for success */
}

.error {
    color: red;
    /* Red color for client errors and general errors */
}

.server-error {
    color: darkred;
    /* Dark red color for server errors */
}

.postmann-header {
    display: flex;
    align-items: center;
    /* Centers the content horizontally */
    margin-bottom: 10px;
    /* Adjust as needed */
}

.postmann-logo {
    width: 50px;
    /* Adjust as needed */
    height: auto;
    margin-right: 10px;
    /* Adjust as needed */
}

.postmann-title {
    margin: 0;
    /* Remove default margin */
}

.postmann-logo.rotating {
    animation: rotate 14s linear infinite;
    /* Adjust duration and timing function as needed */
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

pre {
    font-family: IBMPlexMono, "Courier New", monospace, Consolas, "Courier New", monospace !important;
    font-weight: normal;
    font-size: 12px;
    font-feature-settings: "liga" 0, "calt" 0;
    font-variation-settings: normal;
    line-height: 18px;
    letter-spacing: 0px;
    padding: 1px;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
}
/* ... */

